--- a/Snippets/JavaScript/beginners-intro-js-node/package/package.json
+++ b/Snippets/JavaScript/beginners-intro-js-node/package/package.json
@@ -11,10 +11,10 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "dotenv": "16",
+        "express": "4"
     },
     "devDependencies": {
-        "prettier": "^2.1.2"
+        "prettier": "3"
     }
 }
